initial major update to press page

--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@
           </p>
         </div>
       </div>
-      <div class="hero__img">
+      <div class="hero__img--contact">
         <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
@@ -577,7 +577,7 @@
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
-            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
             <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
@@ -585,6 +585,7 @@
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
+            <li><a href="press" class="footer__list-item">Press</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
