--- a/press.html
+++ b/press.html
@@ -220,18 +220,22 @@
     </div>
   </nav>
 
-  <main class="main container">
+  <main class="main press container container--press">
 
-    <section class="flex flex-col gap--xlg">
-      <div class="flex flex-col gap--sm">
-        <h1 class="hero__heading hero__heading--left text--blue">Press</h1>
-        <p class="hero__body hero--home">Welcome to the Digital Shovel Press Page, where we share the latest news and announcements
-          about the company and our community - new products, partnerships, events, funding and more.
-          <br>
-          If you're a journalist, blogger, or member of the media, we're always available to answer your questions, do
-          interviews and provide you with the information you need.
-        </p>
-        <a class="btn btn--primary" href="press">Contact Us
+    <section class="flex flex-col--lg-tablet ai-c--tablet jc-sb gap--md">
+      <div class="flex flex-col ai-c--tablet gap--lg container__text">
+        <h1 class="hero__heading hero__heading--left">
+          <emphasis>Press</emphasis>
+        </h1>
+        <div class="flex flex-col gap--sm">
+          <h2 class="hero__subheading">Explore the latest company updates, product releases, partnerships, and events on
+            the Digital Shovel Press Page.</h2>
+          <p class="hero__body">
+            Journalists, bloggers, and media members, feel free to reach out for interviews or any information you may
+            require.
+          </p>
+        </div>
+        <a class="btn btn--primary" href="contact">Contact Us
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" />
@@ -239,23 +243,9 @@
           </svg>
         </a>
       </div>
-      <div class="flex flex-col--lg-tablet jc-sb gap--lg w-100">
-        <div class="turnkey__mining">
-          <h2>Start mining in</h2>
-          <h3>45 days</h3>
-          <h2>fully turn-key and managed</h4>
-        </div>
-        <div class="turnkey__watt-price">
-          <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
-          <div class="flex flex-col">
-            <h4>6¢ - 7¢ <small>/ kWh</small></h4>
-            <span>Pricing based on volume</span>
-          </div>
-        </div>
-      </div>
     </section>
 
-    <div class="animation">
+    <section class="animation">
       <div class="animation__container">
         <div class="star star-1"></div>
         <div class="star star-2"></div>
@@ -291,73 +281,188 @@
           </g>
         </svg>
       </div>
-    </div>
+    </section>
 
-    <section class="grid grid__col-6 mtop--xl">
-      <div class="grid-item grid-turnkey__item-1">
-        <img class="grid-item__icon" src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
-        <h5>Land Lease</h5>
-        <p>2-year lease with flat take-or-pay power contract inclusive. Fully prepped site with pad or piles
-          designed
-          specifically for the Digital Shovel Minipods.</p>
-      </div>
-      <div class="grid-item grid-turnkey__item-2">
-        <img class="grid-item__icon" src="images/icons/icon_transformer-hookup_v2.svg" alt="Transformer Hookup Icon">
-        <h5>Transformer Hookup</h5>
-        <p>Included in this offering is the hook-up of our medium voltage transformer to the low voltage switchgear
-          that
-          will feed the Minipods.</p>
-      </div>
-      <div class="grid-item grid-turnkey__item-3">
-        <img class="grid-item__icon" src="images/icons/icon_pod.svg" alt="Minipod Icon">
-        <h5>300kW Pod</h5>
-        <p>Contracts can be purchased in 300kW increments using our Minipod line. You must take an entire pod and
-          will
-          have VPN access to both the pod's miners, as well as the SmartPDU. At the end of the contract, YOU own the
-          Minipod.</p>
-      </div>
-      <div class="grid-item grid-turnkey__item-4">
-        <img class="grid-item__icon" src="images/icons/icon_forklift.svg" alt="Forklift Icon">
-        <h5>Deployment</h5>
-        <p>Deployment, configuration, and setup of your miners is included in the cost of this contract.</p>
-      </div>
-      <div class="grid-item grid-turnkey__item-5">
-        <img class="grid-item__icon" src="images/icons/icon_truck.svg" alt="Truck Icon">
-        <h5>Delivery</h5>
-        <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
+    <section class="press__release mtop--xxl">
+      <h2 class="text__heading text--center">
+        <emphasis class="text--blue">Press Releases</emphasis> & Announcements
+      </h2>
+
+      <div class="flex flex-col gap--md mtop--lg">
+        <a href="https://www.prnewswire.com/news-releases/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announces-the-launch-of-its-latest-revolutionary-product-the-nanopod-301885503.html"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Nano Pod Announcement</h3>
+              <p class="press__release-body">Digital Shovel, the industry leading manufacturer of turnkey, mobile crypto
+                mining containers, today announced the launch of their new solution for small to medium mining
+                operations,
+                the NanoPOD.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/cision-prn.png" alt="Cision PR Newswire Logo">
+          </article>
+        </a>
+
+        <a href="https://www.nasdaq.com/articles/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
+                Solution</h3>
+              <p class="press__release-body">Digital Shovel, the industry leading manufacturer of turnkey, mobile crypto
+                mining containers, has announced the launch of their latest innovation, the NanoPOD.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/nasdaq.png" alt="Nasdaq Logo">
+          </article>
+        </a>
+
+        <a href="https://www.benzinga.com/pressreleases/23/07/n33376386/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announ"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel, the Industry Leading Manufacturer of Turnkey, Mobile
+                Crypto Mining Containers, Announces the Launch of its Latest Revolutionary Product, the 'NanoPOD'</h3>
+              <p class="press__release-body">The NanoPOD, which is designed to be a low energy, high security solution
+                for small to medium miners, will be unveiled at the Mining Disrupt conference in Miami.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/benzinga.png" alt="Benzinga Logo">
+          </article>
+        </a>
+
+        <a href="https://www.investorsobserver.com/news/qm-pr/7508881838089830" target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel, the Industry Leading Manufacturer of Turnkey, Mobile
+                Crypto Mining Containers, Announces the Launch of its Latest Revolutionary Product, the 'NanoPOD'</h3>
+              <p class="press__release-body">The revolutionary new NanoPOD has the smallest footprint of any Digital
+                Shovel product to date , being small enough to fit through a 7-foot tall door and taking up no more
+                space than 2 standard skid spaces in a tractor trailer.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/investors-observer.png"
+              alt="Investors Observer Logo">
+          </article>
+        </a>
       </div>
     </section>
 
-    <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
-      <div class="flex flex-col">
-        <h5>Power Deposit</h5>
-        <h2 class="flex ai-end gap--sm">$42k
-          <small class="text--dark-blue">/pod</small>
-        </h2>
-      </div>
-      <h2>+</h2>
-      <div class="flex flex-col">
-        <h5>Pod Deposit</h5>
-        <h2 class="flex ai-end gap--sm">$15k
-          <span class="flex flex-col gap--sm">
-            <small class="text--emphasis text--blue">+$2300/m</small>
-            <small class="text--dark-blue">for 12 months</small>
-          </span>
-        </h2>
+    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+
+    <section class="press__release">
+      <h2 class="text__heading text--center">
+        <emphasis class="text--blue">Original</emphasis> Articles
+      </h2>
+
+      <div class="flex flex-col gap--md mtop--lg">
+        <a href="https://bitcoinmagazine.com/business/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
+                Solution</h3>
+              <p class="press__release-body">Digital Shovel, the industry leading manufacturer of turnkey, mobile crypto
+                mining containers, has announced the launch of their latest innovation, the NanoPOD.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/bitcoin-magazine.png" alt="Bitcoin Magazine Logo">
+          </article>
+        </a>
+
+        <a href="https://blockster.com/interview-with-scot-johnson-founder-of-digital-shovel-leading-bitcoin-mining-manufacturer"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Unpacking the Nano Pod: Digital Shovel's New Era in Bitcoin Mining</h3>
+              <p class="press__release-body">Digital Shovel CEO discusses the innovative Nano Pod, a new consumer-level
+                Bitcoin mining solution.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/blockster.png" alt="Blockster Logo">
+          </article>
+        </a>
+
+        <a href="https://icoholder.com/en/interview/digital-shovel-sets-the-new-trends-in-the-crypto-mining-industry"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Interview with Scot Johnson, Founder of Digital Shovel - Leading Bitcoin
+                Mining Manufacturer</h3>
+              <p class="press__release-body">Scot is the founder of Digital Shovel, an infrastructure developer and
+                manufacturer for mining Bitcoin. The company focuses on making data centers autonomous and
+                self-sufficient, with a focus on energy management.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/ico-holder.png" alt="Ico Holder Logo">
+          </article>
+        </a>
+
+        <a href="https://www.thestreet.com/crypto/investing/unpacking-the-nano-pod-digital-shovels-new-era-in-bitcoin-mining"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 25th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel sets the new trends in the crypto mining industry!</h3>
+              <p class="press__release-body">Scot Johnson, CEO of Digital Shovel project, invites those our readers who
+                are interested in Bitcoin mining to try their truly revolutionary product, the Nano Pod.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/the-street.png" alt="The Street Logo">
+          </article>
+        </a>
       </div>
     </section>
 
-    <section class="turnkey__cta flex flex-col ai-c">
-      <a class="btn btn--primary" href="contact">Get Started
+    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+
+    <section class="press__release">
+      <h2 class="text__heading text--center">
+        <emphasis class="text--blue">Podcasts</emphasis> & Influencer Mentions
+      </h2>
+
+      <div class="flex flex-col gap--md mtop--lg">
+        <a href="https://www.youtube.com/watch?v=sCr3okt99Yk&t=67s" target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 26th, 2023</small>
+              <h3 class="press__release-title">Big Dawg Crypto Podcast Special - Scot Johnson, CEO of Digital Shovel
+              </h3>
+              <p class="press__release-body">Join Big Dawg Crypto (@woofBIGDAWG) and Scot Johnson, CEO of Digital Shovel
+                (@Digital_Shovel) for an exciting conversation about the
+                company's groundbreaking new product the NanoPOD and the future of bitcoin mining.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/big-dawg-crypto-podcast.png"
+              alt="Big Dawg Crypto Podcast Logo">
+          </article>
+        </a>
+
+        <a href="https://youtu.be/8gV6RMyqSkE?t=71" target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">July 26th, 2023</small>
+              <h3 class="press__release-title">Mining Disrupt Day 1 continued</h3>
+              <p class="press__release-body">The Mining Kiing walks through the first day of Mining Disrupt and
+                showcases all the featured products, including the Digital Shovel NanoPOD.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/mining-king.png" alt="The Mining Kiing Logo">
+          </article>
+        </a>
+      </div>
+    </section>
+
+    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+
+    <div class="press__cta flex flex-col gap--md ai-c">
+      <h3 class="text--center">Feel free to contact us to book an interview with Digital Shovel</h3>
+      <a class="btn btn--primary" href="contact">Contact Us
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" />
           <path d="M2.5 1L7.95455 6L2.5 11" />
         </svg>
       </a>
-      <h3>You own the pods at the end</h3>
-      <h4>*2 Year Minimum Commitment & Only 6MW Available</h4>
-    </section>
+    </div>
   </main>
 
   <footer class="footer">
@@ -378,7 +483,7 @@
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
-            <li><a href="fans" class="footer__list-item">Cooling Fans</a></li>
+            <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
             <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
@@ -386,6 +491,7 @@
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
+            <li><a href="press" class="footer__list-item">Press</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
