press posts split into 2cols

--- a/m300.html
+++ b/m300.html
@@ -641,7 +641,7 @@
         <h2 class="text__heading">Configurations & <span class="text--blue">Pricing</span></h2>
         <p class="text__body text--center">Our modular design allows Minipods to be customized into a set of units and
           addons that fit your needs best.</p>
-        <div class="flex flex-col gap--xlg mtop--xxl">
+        <div class="flex flex-col gap--xlg mtop--2xl">
           <div class="pricing__set pricing__set-1 gap--lg ai-end jc-c">
             <img class="pricing__set-img" src="images/illustrations/minipod-1unit.svg"
               alt="Minipod Single Unit Illustration" />
@@ -848,7 +848,7 @@
             </div>
           </div>
         </div>
-        <a href="contact" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
+        <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
