--- a/pages/archived/team.html
+++ b/pages/archived/team.html
@@ -606,7 +606,7 @@
     </section>
 
     <section class="gallery container">
-      <article class="gallery__grid mbot--xxl">
+      <article class="gallery__grid mbot--2xl">
         <img class="photo--lg" src="images/photos/team-1.jpg" alt="Photo of Digital Shovel Team Event">
         <img class="photo--lg" src="images/photos/team-2.jpg" alt="Photo of Digital Shovel Team Event">
         <img class="photo--lg" src="images/photos/team-3.jpg" alt="Photo of Digital Shovel Team Event">
