--- a/press.html
+++ b/press.html
@@ -283,15 +283,16 @@
       </div>
     </section>
 
-    <section class="press__release mtop--xxl">
+    <section class="press__release mtop--2xl">
       <h2 class="text__heading text--center">
         <emphasis class="text--blue">Press Releases</emphasis> & Announcements
       </h2>
 
-      <div class="flex flex-col gap--md mtop--lg">
-        <a href="https://www.prnewswire.com/news-releases/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announces-the-launch-of-its-latest-revolutionary-product-the-nanopod-301885503.html"
+      <div class="press__release-list mtop--lg">
+        <a class="press__release-link"
+          href="https://www.prnewswire.com/news-releases/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announces-the-launch-of-its-latest-revolutionary-product-the-nanopod-301885503.html"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Nano Pod Announcement</h3>
@@ -304,9 +305,10 @@
           </article>
         </a>
 
-        <a href="https://www.nasdaq.com/articles/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
+        <a class="press__release-link"
+          href="https://www.nasdaq.com/articles/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
@@ -318,13 +320,14 @@
           </article>
         </a>
 
-        <a href="https://www.benzinga.com/pressreleases/23/07/n33376386/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announ"
+        <a class="press__release-link"
+          href="https://www.benzinga.com/pressreleases/23/07/n33376386/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announ"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
-              <h3 class="press__release-title">Digital Shovel, the Industry Leading Manufacturer of Turnkey, Mobile
-                Crypto Mining Containers, Announces the Launch of its Latest Revolutionary Product, the 'NanoPOD'</h3>
+              <h3 class="press__release-title">Digital Shovel, Announces the Launch of its Latest Revolutionary Product,
+                the 'NanoPOD'</h3>
               <p class="press__release-body">The NanoPOD, which is designed to be a low energy, high security solution
                 for small to medium miners, will be unveiled at the Mining Disrupt conference in Miami.</p>
             </div>
@@ -332,12 +335,13 @@
           </article>
         </a>
 
-        <a href="https://www.investorsobserver.com/news/qm-pr/7508881838089830" target="_blank">
-          <article class="press__release-post">
+        <a class="press__release-link" href="https://www.investorsobserver.com/news/qm-pr/7508881838089830"
+          target="_blank">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
-              <h3 class="press__release-title">Digital Shovel, the Industry Leading Manufacturer of Turnkey, Mobile
-                Crypto Mining Containers, Announces the Launch of its Latest Revolutionary Product, the 'NanoPOD'</h3>
+              <h3 class="press__release-title">Digital Shovel, Announces the Launch of its Latest Revolutionary Product,
+                the 'NanoPOD'</h3>
               <p class="press__release-body">The revolutionary new NanoPOD has the smallest footprint of any Digital
                 Shovel product to date , being small enough to fit through a 7-foot tall door and taking up no more
                 space than 2 standard skid spaces in a tractor trailer.</p>
@@ -356,10 +360,11 @@
         <emphasis class="text--blue">Original</emphasis> Articles
       </h2>
 
-      <div class="flex flex-col gap--md mtop--lg">
-        <a href="https://bitcoinmagazine.com/business/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
+      <div class="press__release-list mtop--lg">
+        <a class="press__release-link"
+          href="https://bitcoinmagazine.com/business/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
@@ -371,9 +376,10 @@
           </article>
         </a>
 
-        <a href="https://blockster.com/interview-with-scot-johnson-founder-of-digital-shovel-leading-bitcoin-mining-manufacturer"
+        <a class="press__release-link"
+          href="https://blockster.com/interview-with-scot-johnson-founder-of-digital-shovel-leading-bitcoin-mining-manufacturer"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Unpacking the Nano Pod: Digital Shovel's New Era in Bitcoin Mining</h3>
@@ -384,9 +390,10 @@
           </article>
         </a>
 
-        <a href="https://icoholder.com/en/interview/digital-shovel-sets-the-new-trends-in-the-crypto-mining-industry"
+        <a class="press__release-link"
+          href="https://icoholder.com/en/interview/digital-shovel-sets-the-new-trends-in-the-crypto-mining-industry"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Interview with Scot Johnson, Founder of Digital Shovel - Leading Bitcoin
@@ -399,9 +406,10 @@
           </article>
         </a>
 
-        <a href="https://www.thestreet.com/crypto/investing/unpacking-the-nano-pod-digital-shovels-new-era-in-bitcoin-mining"
+        <a class="press__release-link"
+          href="https://www.thestreet.com/crypto/investing/unpacking-the-nano-pod-digital-shovels-new-era-in-bitcoin-mining"
           target="_blank">
-          <article class="press__release-post">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel sets the new trends in the crypto mining industry!</h3>
@@ -414,16 +422,20 @@
       </div>
     </section>
 
-    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+    <section class="divider__dots">
+      
+    </section>
+
+    <!-- <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers"> -->
 
     <section class="press__release">
       <h2 class="text__heading text--center">
         <emphasis class="text--blue">Podcasts</emphasis> & Influencer Mentions
       </h2>
 
-      <div class="flex flex-col gap--md mtop--lg">
-        <a href="https://www.youtube.com/watch?v=sCr3okt99Yk&t=67s" target="_blank">
-          <article class="press__release-post">
+      <div class="press__release-list mtop--lg">
+        <a class="press__release-link" href="https://www.youtube.com/watch?v=sCr3okt99Yk&t=67s" target="_blank">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 26th, 2023</small>
               <h3 class="press__release-title">Big Dawg Crypto Podcast Special - Scot Johnson, CEO of Digital Shovel
@@ -436,9 +448,9 @@
               alt="Big Dawg Crypto Podcast Logo">
           </article>
         </a>
-
-        <a href="https://youtu.be/8gV6RMyqSkE?t=71" target="_blank">
-          <article class="press__release-post">
+        
+        <a class="press__release-link" href="https://youtu.be/8gV6RMyqSkE?t=71" target="_blank">
+          <article class="press__release-post flex flex-col gap--lg">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 26th, 2023</small>
               <h3 class="press__release-title">Mining Disrupt Day 1 continued</h3>
@@ -448,7 +460,7 @@
             <img class="press__release-img" src="images/press-logos/mining-king.png" alt="The Mining Kiing Logo">
           </article>
         </a>
-      </div>
+        </div>
     </section>
 
     <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
