--- a/nanopod.html
+++ b/nanopod.html
@@ -397,7 +397,7 @@
           <img src="images/illustrations/nanopod-back_with-text.svg" alt="NanoPOD Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="contact" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
+        <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
