added css-made dividers

--- a/press.html
+++ b/press.html
@@ -220,9 +220,9 @@
     </div>
   </nav>
 
-  <main class="main press container container--press">
+  <main class="main press container container--2xl">
 
-    <section class="flex flex-col--lg-tablet ai-c--tablet jc-sb gap--md">
+    <section class="press__hero flex flex-col--lg-tablet ai-c--tablet jc-sb gap--md">
       <div class="flex flex-col ai-c--tablet gap--lg container__text">
         <h1 class="hero__heading hero__heading--left">
           <emphasis>Press</emphasis>
@@ -283,7 +283,7 @@
       </div>
     </section>
 
-    <section class="press__release mtop--2xl">
+    <section class="press__release mtop--4xl">
       <h2 class="text__heading text--center">
         <emphasis class="text--blue">Press Releases</emphasis> & Announcements
       </h2>
@@ -353,7 +353,26 @@
       </div>
     </section>
 
-    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+    <section class="press__divider">
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+    </section>
 
     <section class="press__release">
       <h2 class="text__heading text--center">
@@ -422,11 +441,26 @@
       </div>
     </section>
 
-    <section class="divider__dots">
-      
+    <section class="press__divider">
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
     </section>
-
-    <!-- <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers"> -->
 
     <section class="press__release">
       <h2 class="text__heading text--center">
@@ -463,7 +497,26 @@
         </div>
     </section>
 
-    <img class="press__divider mtop--xl mbot--xl" src="images/backgrounds/dot-dividers.svg" alt="Dot Dividers">
+    <section class="press__divider">
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+      <div class="press__divider-shape"></div>
+    </section>
 
     <div class="press__cta flex flex-col gap--md ai-c">
       <h3 class="text--center">Feel free to contact us to book an interview with Digital Shovel</h3>
