added separate js file for the subnav title change for mobiles

--- a/nanopod.html
+++ b/nanopod.html
@@ -14,7 +14,7 @@
   <!-- Social media tags -->
   <meta property="og:title" content="Digital Shovel • NanoPOD">
   <meta property="og:description"
-    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+    content="Digital Shovel, the industry leading manufacturer of turnkey, mobile crypto mining containers, has announced the launch of their latest innovation, the NanoPOD. Designed specifically for small to medium mining operations, the NanoPOD stands out as the company's most compact and efficient offering to date, setting a new standard in size and convenience.">
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
   <meta property="og:url" content="/nanopod.html">
   <meta property="og:site_name" content="Digital Shovel">
@@ -46,7 +46,8 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
-  <script defer src="/app/js/subnav"></script>
+  <script defer src="/app/js/subnav.js"></script>
+  <script defer src="/app/js/subnav-title-change.js"></script>
 
   <title>Digital Shovel • NanoPOD</title>
 
