--- a/m300.html
+++ b/m300.html
@@ -48,6 +48,7 @@
   <script defer src="/app/js/gallery.js?v=1.0"></script>
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/subnav.js"></script>
+  <script defer src="/app/js/subnav-title-change.js"></script>
 
   <title>Digital Shovel • M300 Minipod</title>
 
